concord_macros/tests/trybuild/fail/codegen/unsupported_trace_method.stderr
error: unsupported endpoint method
 --> tests/trybuild/fail/codegen/unsupported_trace_method.rs:8:5
  |
8 |     TRACE Ping
  |     ^^^^^
